--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
     </FrameLayout>
 
     <Button
+        android:id="@+id/buttonSearch"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="@dimen/button_weight"
@@ -33,6 +34,7 @@
         android:textColor="@color/black_blue"
         android:inputType="textCapSentences"
         android:textSize="@dimen/text_size"
+        android:foreground="?attr/selectableItemBackground"
         app:icon="@drawable/ic_search"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_for_text"
@@ -41,6 +43,7 @@
         />
 
     <Button
+        android:id="@+id/buttonMedia"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="@dimen/button_weight"
@@ -49,14 +52,16 @@
         android:textColor="@color/black_blue"
         android:inputType="textCapSentences"
         android:textSize="@dimen/text_size"
+        android:foreground="?attr/selectableItemBackground"
         app:icon="@drawable/ic_media"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_for_text"
         app:iconTint="@color/black_blue"
         app:cornerRadius="@dimen/button_radius"
-        />
+        tools:ignore="TextViewEdits"/>
 
     <Button
+        android:id="@+id/buttonSettings"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="@dimen/button_weight"
@@ -65,10 +70,11 @@
         android:textColor="@color/black_blue"
         android:inputType="textCapSentences"
         android:textSize="@dimen/text_size"
+        android:foreground="?attr/selectableItemBackground"
         app:icon="@drawable/ic_settings"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_for_text"
         app:iconTint="@color/black_blue"
         app:cornerRadius="@dimen/button_radius"
-        />
+        tools:ignore="TextViewEdits"/>
 </LinearLayout>
