--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,9 @@
     <dimen name="text_size_16">16sp</dimen>
     <dimen name="icon_for_text">10dp</dimen>
     <dimen name="button_weight">1</dimen>
-    <dimen name="button_radius">16</dimen>
-    <dimen name="padding_4_for_settings">4</dimen>
-    <dimen name="margin_settings">16</dimen>
-    <dimen name="margin_settings_21">21</dimen>
+    <dimen name="button_radius">16dp</dimen>
+    <dimen name="padding_4_for_settings">4dp</dimen>
+    <dimen name="margin_settings">16dp</dimen>
+    <dimen name="margin_settings_21">21dp</dimen>
+    <dimen name="button_height">0dp</dimen>
 </resources>
