--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,19 +10,13 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:visibility="visible"
-        android:paddingBottom="24dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/title"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size"
-            />
-    </FrameLayout>
+            android:paddingBottom="24dp"/>
 
     <Button
         android:id="@+id/buttonSearch"
