add style for element activity_main and activity_setting, add font, add dark theme

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="icon_for_text">12dp</dimen>
     <dimen name="button_weight">1</dimen>
     <dimen name="button_radius">16dp</dimen>
+    <dimen name="margin_main">16dp</dimen>
     <dimen name="padding_4_for_settings">4dp</dimen>
     <dimen name="margin_settings">16dp</dimen>
     <dimen name="margin_settings_20">20dp</dimen>
