--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:theme="@style/Theme.PlaylistMaker"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="?attr/colorSecondary"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -19,20 +20,20 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:stateListAnimator="@null"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="?attr/colorSecondary"
             android:textSize="@dimen/text_size"
             app:icon="@drawable/ic_arrow_back"
-            app:iconTint="@color/black_blue"
+            app:iconTint="?attr/colorOnSecondary"
             android:layout_gravity="center"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/settings"
-            android:textColor="@color/black_blue"
+            android:textColor="?attr/colorOnSecondary"
             android:textSize="22sp"
             android:layout_gravity="center"
             android:paddingStart="12dp"
-            />
+            android:fontFamily="@font/ys_display_medium"/>
     </LinearLayout>
 
     <FrameLayout
@@ -40,99 +41,50 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|center_horizontal"
-            android:layout_marginStart="@dimen/margin_settings"
-            android:layout_marginTop="@dimen/margin_settings_20"
-            android:layout_marginBottom="@dimen/margin_settings_20"
             android:text="@string/dark_Theme"
-            android:textColor="@color/black_blue"
-            android:textSize="@dimen/text_size_16"/>
+            style="@style/TextViewSettings" />
 
         <Switch
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:layout_margin="@dimen/margin_settings_20"
+            style="@style/ImageViewSettings"
             />
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/padding_4_for_settings"
-        tools:ignore="ExtraText">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|center_horizontal"
-            android:layout_marginStart="@dimen/margin_settings"
-            android:layout_marginTop="@dimen/margin_settings_20"
-            android:layout_marginBottom="@dimen/margin_settings_20"
             android:text="@string/share"
-            android:textColor="@color/black_blue"
-            android:textSize="@dimen/text_size_16"/>
+            style="@style/TextViewSettings"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
             android:src="@drawable/ic_share"
-            android:layout_margin="@dimen/margin_settings_20"
-             />
+            style="@style/ImageViewSettings"/>
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/padding_4_for_settings"
-        tools:ignore="ExtraText">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|center_horizontal"
-            android:layout_marginStart="@dimen/margin_settings"
-            android:layout_marginTop="@dimen/margin_settings_20"
-            android:layout_marginBottom="@dimen/margin_settings_20"
-            android:text="@string/share"
-            android:textColor="@color/black_blue"
-            android:textSize="@dimen/text_size_16"/>
+            style="@style/TextViewSettings"
+            android:text="@string/share"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
             android:src="@drawable/ic_support"
-            android:layout_margin="@dimen/margin_settings_20"
-            />
+            style="@style/ImageViewSettings"/>
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/padding_4_for_settings"
-        tools:ignore="ExtraText">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|center_horizontal"
-            android:layout_marginStart="@dimen/margin_settings"
-            android:layout_marginTop="@dimen/margin_settings_20"
-            android:layout_marginBottom="@dimen/margin_settings_20"
-            android:text="@string/share"
-            android:textColor="@color/black_blue"
-            android:textSize="@dimen/text_size_16"/>
+            style="@style/TextViewSettings"
+            android:text="@string/share"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
             android:src="@drawable/ic_arrow_forward"
-            android:layout_margin="@dimen/margin_settings_20"
-            />
+            style="@style/ImageViewSettings"/>
     </FrameLayout>
 </LinearLayout>
