--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:theme="@style/Theme.PlaylistMaker"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    android:background="?attr/colorSecondary"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding_4_for_settings"
+        android:layout_marginBottom="24dp">
+        <Button
+            android:id="@+id/buttonArrowBackSettings"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:stateListAnimator="@null"
+            android:backgroundTint="?attr/colorSecondary"
+            android:textSize="@dimen/text_size"
+            app:icon="@drawable/ic_arrow_back"
+            app:iconTint="?attr/colorOnSecondary"
+            android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/search"
+            android:textColor="?attr/colorOnSecondary"
+            android:textSize="22sp"
+            android:layout_gravity="center"
+            android:paddingStart="12dp"
+            android:fontFamily="@font/ys_display_medium"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:orientation="horizontal"
+        tools:context=".MainActivity">
+
+        <EditText
+            android:id="@+id/searchEditText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/search"
+            android:maxLines="1"
+            android:inputType="text"
+            android:textColor="?attr/colorOnSecondary"
+            android:textColorHint="@color/gray"
+            android:fontFamily="@font/ys_text_regular"
+            android:textSize="@dimen/text_size_16"/>
+
+        <ImageView
+            android:id="@+id/searchClearIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@android:drawable/ic_menu_close_clear_cancel"
+            android:visibility="gone"
+            app:tint="?attr/colorSecondaryVariant"
+            />
+    </LinearLayout>
+
+
+
+
+
+
+
+
+</LinearLayout>
