--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="icon_search">@color/gray</item>
+        <item name="text_search">@color/gray</item>
+        <item name="edit_text">@color/light_gray</item>
     </style>
 </resources>
