--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,69 +10,67 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/padding_4_for_settings"
-        android:layout_marginBottom="24dp">
+    <LinearLayout style="@style/panel_header">
         <Button
             android:id="@+id/buttonArrowBackSettings"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:stateListAnimator="@null"
-            android:backgroundTint="?attr/colorSecondary"
-            android:textSize="@dimen/text_size"
-            app:icon="@drawable/ic_arrow_back"
-            app:iconTint="?attr/colorOnSecondary"
-            android:layout_gravity="center"/>
+            style="@style/button_arrowBack_panel_header"/>
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/search"
-            android:textColor="?attr/colorOnSecondary"
-            android:textSize="22sp"
-            android:layout_gravity="center"
-            android:paddingStart="12dp"
-            android:fontFamily="@font/ys_display_medium"/>
+            style="@style/text_panel_header"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/container"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:orientation="horizontal"
-        tools:context=".MainActivity">
+        android:layout_marginStart="@dimen/margin_edit_text"
+        android:layout_marginEnd="@dimen/margin_edit_text"
+        app:cardCornerRadius="8dp">
 
-        <EditText
-            android:id="@+id/searchEditText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/search"
-            android:maxLines="1"
-            android:inputType="text"
-            android:textColor="?attr/colorOnSecondary"
-            android:textColorHint="@color/gray"
-            android:fontFamily="@font/ys_text_regular"
-            android:textSize="@dimen/text_size_16"/>
+        <LinearLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:orientation="horizontal"
+            tools:context=".MainActivity"
+            android:background="?attr/edit_text"
+            app:cardCornerRadius="8dp">
 
-        <ImageView
-            android:id="@+id/searchClearIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@android:drawable/ic_menu_close_clear_cancel"
-            android:visibility="gone"
-            app:tint="?attr/colorSecondaryVariant"
-            />
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/searchIcon"
+                android:layout_width="@dimen/button_height"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_search"
+                app:tint="?attr/icon_search"
+                android:layout_margin="@dimen/padding_text"/>
 
+            <EditText
+                android:id="@+id/searchEditText"
+                android:layout_width="@dimen/button_height"
+                android:layout_height="wrap_content"
+                android:layout_weight="20"
+                android:layout_gravity="center_vertical"
+                android:hint="@string/search"
+                android:maxLines="1"
+                android:inputType="text"
+                android:textColor="@color/black"
+                android:textColorHint="?attr/text_search"
+                android:fontFamily="@font/ys_text_regular"
+                android:textSize="@dimen/text_size_16"
+                android:background="@null"/>
 
-
-
-
-
-
-
+            <ImageView
+                android:id="@+id/searchClearIcon"
+                android:layout_width="@dimen/button_height"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:src="@android:drawable/ic_menu_close_clear_cancel"
+                android:visibility="visible"
+                app:tint="?attr/icon_search"
+                android:layout_margin="@dimen/padding_text"
+                />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
