--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,14 +10,10 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout style="@style/panel_header">
-        <Button
-            android:id="@+id/buttonArrowBackSettings"
-            style="@style/button_arrowBack_panel_header"/>
-        <TextView
-            android:text="@string/settings"
-            style="@style/text_panel_header"/>
-    </LinearLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarSetting"
+        app:title="@string/settings"
+        style="@style/panel_header_toolbar"/>
 
     <FrameLayout
         android:id="@+id/button_dark_theme"
