--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -56,7 +56,9 @@
                 android:fontFamily="@font/ys_text_regular"
                 android:textSize="@dimen/text_size_16"
                 android:background="@null"
-                android:textCursorDrawable="@null"/>
+                android:textCursorDrawable="@null"
+                android:imeOptions="actionDone"
+                android:singleLine="true"/>
 
             <ImageView
                 android:id="@+id/searchClearIcon"
@@ -71,9 +73,59 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+
+        <LinearLayout
+            android:id="@+id/placeholderNothingWasFound"
+            style="@style/search_plaseholder">
+
+            <ImageView
+                style="@style/search_image"
+                android:src="@drawable/ic_nothingfound"/>
+
+            <TextView
+                style="@style/search_textview"
+                android:text="@string/nothing_found"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/placeholderCommunicationsProblem"
+            style="@style/search_plaseholder">
+
+            <ImageView
+                android:src="@drawable/ic_communicationproblems"
+                style="@style/search_image"/>
+
+            <TextView
+                style="@style/search_textview"
+                android:text="@string/communications_problem1"/>
+
+            <TextView
+                style="@style/search_textview"
+                android:text="@string/communications_problem2"/>
+
+            <Button
+                android:id="@+id/button_return"
+                style="@style/search_button_refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:backgroundTint="?attr/colorOnSecondary"
+                android:text="@string/refresh_button"
+                android:textColor="?attr/colorSecondary"
+                android:textSize="@dimen/text_size_14"
+                android:fontFamily="@font/ys_display_medium"
+                android:inputType="textCapSentences"/>
+
+        </LinearLayout>
+    </FrameLayout>
 </LinearLayout>
