--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,6 +69,9 @@
         <item name="android:textColor">?attr/colorSecondaryVariant</item>
         <item name="android:textSize">11sp</item>
         <item name="android:fontFamily">@font/ys_text_regular</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
     <style name="search_button_refresh">
