--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -3,4 +3,5 @@
     <attr name="icon_search" format="reference"/>
     <attr name="text_search" format="reference"/>
     <attr name="edit_text" format="reference"/>
+    <attr name="button_media" format="reference"/>
 </resources>
