--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="black_blue">#1A1B22</color>
     <color name="gray">#AEAFB4</color>
     <color name="light_gray">#E6E8EB</color>
+    <color name="dark_gray">#4d4d4d</color>
 
 
 </resources>
