fix reviewer's comments

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,8 @@
     <dimen name="margin_media">8dp</dimen>
     <dimen name="margin_top_media">16dp</dimen>
     <dimen name="size_button">52dp</dimen>
+    <dimen name="text_size_22">22sp</dimen>
+    <dimen name="margin_bottom_54">54dp</dimen>
+    <dimen name="margin_bottom_24">24dp</dimen>
+    <dimen name="margin_bottom_12">12dp</dimen>
 </resources>
