--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -41,7 +41,7 @@
         app:layout_constraintBottom_toTopOf="@id/trackName"
         android:layout_marginStart="@dimen/margin_media"
         android:layout_marginEnd="@dimen/margin_media"
-        android:layout_marginBottom="@dimen/margin_media"
+        android:layout_marginBottom="@dimen/margin_bottom_24"
         android:contentDescription="@string/artwork"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
@@ -54,10 +54,9 @@
         app:layout_constraintTop_toBottomOf="@id/artwork_url_100"
         app:layout_constraintStart_toStartOf="@id/left_guideline"
         app:layout_constraintBottom_toTopOf="@id/artistName"
-        android:textSize="@dimen/text_size_20"
+        android:textSize="@dimen/text_size_22"
         android:layout_marginStart="@dimen/margin_media"
         android:layout_marginEnd="@dimen/margin_media"
-        android:layout_marginTop="@dimen/margin_media"
         android:fontFamily="@font/ys_display_medium"
         tools:text="Song title"
         android:textColor="?attr/colorOnSecondary"/>
@@ -68,12 +67,12 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/trackName"
         app:layout_constraintStart_toStartOf="@id/left_guideline"
-        app:layout_constraintBottom_toTopOf="@id/play_track"
+        app:layout_constraintBottom_toTopOf="@id/button_add_track"
         android:textSize="@dimen/text_size_14"
         android:layout_marginStart="@dimen/margin_media"
         android:layout_marginEnd="@dimen/margin_media"
-        android:layout_marginTop="@dimen/margin_media"
-        android:layout_marginBottom="@dimen/margin_media"
+        android:layout_marginTop="@dimen/margin_bottom_12"
+        android:layout_marginBottom="@dimen/margin_bottom_54"
         android:fontFamily="@font/ys_display_medium"
         tools:text="Artist name"
         android:textColor="?attr/colorOnSecondary"/>
@@ -83,6 +82,7 @@
         android:layout_width="@dimen/size_button"
         android:layout_height="@dimen/size_button"
         app:fabCustomSize="@dimen/size_button"
+        app:layout_constraintTop_toBottomOf="@id/artistName"
         app:layout_constraintStart_toStartOf="@id/left_guideline"
         app:layout_constraintTop_toTopOf="@id/play_track"
         app:layout_constraintBottom_toBottomOf="@id/play_track"
@@ -106,7 +106,6 @@
         app:layout_constraintBottom_toTopOf="@id/duration"
         app:layout_constraintEnd_toStartOf="@id/like_track"
         app:layout_constraintTop_toBottomOf="@id/artistName"
-        android:layout_marginTop="@dimen/margin_media"
         app:elevation="0dp"
         app:backgroundTint="?attr/colorOnSecondary"
         app:tint="?attr/colorSecondary"
@@ -140,7 +139,7 @@
         android:textSize="13sp"
         android:textColor="?attr/colorOnSecondary"
         android:layout_marginTop="@dimen/margin_media"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="40dp"
         tools:text="0:00"/>
 
     <TextView
