--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="settings_switch_material">
+    <style name="settingsSwitchMaterial">
         <item name="trackTint" tools:targetApi="m">@color/light_blue</item>
         <item name="thumbTint">@color/blue</item>
     </style>
