Added the media library screen with the use of fragments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
     <Button
         android:id="@+id/buttonMedia"
         app:icon="@drawable/ic_media"
-        android:text="@string/media"
+        android:text="@string/media_library"
         style="@style/ButtonStyleMain"/>
 
     <Button
