--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -106,7 +106,8 @@
 
         <LinearLayout
             android:id="@+id/placeholderCommunicationsProblem"
-            style="@style/searchPlaceholder">
+            style="@style/searchPlaceholder"
+            android:visibility="visible">
 
             <ImageView
                 android:src="@drawable/ic_communicationproblems"
@@ -123,15 +124,9 @@
             <Button
                 android:id="@+id/button_return"
                 style="@style/searchButtonRefresh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:backgroundTint="?attr/colorOnSecondary"
                 android:text="@string/refresh_button"
-                android:textColor="?attr/colorSecondary"
-                android:textSize="@dimen/text_size_14"
-                android:fontFamily="@font/ys_display_medium"
-                android:inputType="textCapSentences"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
         <LinearLayout
@@ -162,15 +157,9 @@
             <Button
                 android:id="@+id/button_clear_history"
                 style="@style/searchButtonRefresh"
+                android:text="Очистить историю"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:backgroundTint="?attr/colorOnSecondary"
-                android:text="Очистить историю"
-                android:textColor="?attr/colorSecondary"
-                android:textSize="@dimen/text_size_14"
-                android:fontFamily="@font/ys_display_medium"
-                android:inputType="textCapSentences"
                 android:layout_margin="24dp"/>
         </LinearLayout>
     </FrameLayout>
