--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,5 +16,6 @@
         <item name="text_search">@color/gray</item>
         <item name="edit_text">@color/light_gray</item>
         <item name="button_media">@color/gray</item>
+        <item name="item_menu">@color/black</item>
     </style>
 </resources>
