Using the database

--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -111,7 +111,7 @@
         app:layout_constraintTop_toBottomOf="@id/artistName"
         android:src="@drawable/ic_baseline_play_arrow_24"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ImageView
         android:id="@+id/like_track"
         android:layout_width="@dimen/size_button"
         android:layout_height="@dimen/size_button"
@@ -121,11 +121,10 @@
         app:layout_constraintBottom_toBottomOf="@id/play_track"
         app:layout_constraintTop_toTopOf="@id/play_track"
         android:backgroundTint="?attr/button_media"
-        app:tint="@color/white"
         android:layout_marginEnd="8dp"
         app:elevation="0dp"
         android:foregroundGravity="center"
-        android:src="@drawable/ic_button_like_track"/>
+        android:src="@drawable/ic_button_like_off"/>
 
     <TextView
         android:id="@+id/duration"
