Implemented the ability to create a playlist and add a track to the playlist

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,5 +17,7 @@
         <item name="edit_text">@color/white</item>
         <item name="button_media">@color/dark_gray</item>
         <item name="item_menu">@color/white</item>
+        <item name="snackbar">@color/white</item>
+        <item name="snackbar_text">@color/black</item>
     </style>
 </resources>
