--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -5,4 +5,6 @@
     <attr name="edit_text" format="reference"/>
     <attr name="button_media" format="reference"/>
     <attr name="item_menu" format="reference"/>
+    <attr name="snackbar" format="reference"/>
+    <attr name="snackbar_text" format="reference"/>
 </resources>
