--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -186,4 +186,13 @@
         <item name="android:fontFamily">@font/ys_text_regular</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="createButton">
+        <item name="cornerRadius">8dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:inputType">textCapSentences</item>
+    </style>
 </resources>
