--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,5 +17,7 @@
         <item name="edit_text">@color/light_gray</item>
         <item name="button_media">@color/gray</item>
         <item name="item_menu">@color/black</item>
+        <item name="snackbar">@color/black</item>
+        <item name="snackbar_text">@color/white</item>
     </style>
 </resources>
