--- a/app/src/main/res/color/text_input.xml
+++ b/app/src/main/res/color/text_input.xml
@@ -2,6 +2,6 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/blue" android:state_focused="true"/>
-    <item android:color="@color/blue" android:state_hovered="true"/>
-    <item android:color="@color/blue"/>
+    <item android:color="@color/blue" android:state_focused="false" android:state_enabled="true"/>
+    <item android:color="@color/gray"/>
 </selector>
