--- a/app/src/main/res/color/text_not.xml
+++ b/app/src/main/res/color/text_not.xml
@@ -2,6 +2,5 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/blue" android:state_focused="true"/>
-    <item android:color="@color/blue" android:state_hovered="true"/>
-    <item android:color="@color/black"/>
+    <item android:color="@color/snackbar"/>
 </selector>
