--- a/app/src/main/res/color/text_not_box_stroke.xml
+++ b/app/src/main/res/color/text_not_box_stroke.xml
@@ -3,5 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/blue" android:state_focused="true"/>
     <item android:color="@color/blue" android:state_hovered="true"/>
-    <item android:color="@color/gray"/>
+    <item android:color="@color/box_stroke"/>
 </selector>
