--- a/app/src/main/res/layout/playlist_view_on_player.xml
+++ b/app/src/main/res/layout/playlist_view_on_player.xml
@@ -13,14 +13,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardElevation="0dp"
-        app:cardCornerRadius="2dp">
+        app:cardCornerRadius="2dp"
+        android:layout_margin="8dp">
 
         <ImageView
             android:id="@+id/cover_playlist"
             android:layout_width="@dimen/sideImageTrack"
             android:layout_height="@dimen/sideImageTrack"
-            android:src="@drawable/ic_placeholder"
-            android:layout_margin="@dimen/marginImageTrack"
+            android:src="@drawable/ic_placeholder_512x512"
+            android:background="?attr/colorSecondary"
             android:scaleType="centerCrop"/>
 
     </androidx.cardview.widget.CardView>
