--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="snackbar">#FFFFFFFF</color>
     <color name="snackbar_text">#FF000000</color>
+    <color name="box_stroke">#FFFFFFFF</color>
+    <color name="box_text">#FFFFFFFF</color>
 </resources>
