--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -7,4 +7,5 @@
     <attr name="item_menu" format="reference"/>
     <attr name="snackbar" format="reference"/>
     <attr name="snackbar_text" format="reference"/>
+    <attr name="hint" format="reference"/>
 </resources>
