--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="dark_gray">#4d4d4d</color>
     <color name="snackbar">#FF000000</color>
     <color name="snackbar_text">#FFFFFFFF</color>
+    <color name="box_stroke">#AEAFB4</color>
+    <color name="box_text">#FF000000</color>
 </resources>
