the reviewer's comments have been corrected

--- a/app/src/main/res/layout/fragment_favorite_track.xml
+++ b/app/src/main/res/layout/fragment_favorite_track.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="?attr/colorSecondary"
-    tools:context="com.practicum.playlistmaker.media_library.ui.fragment.FavoriteTrackFragment">
+    tools:context="com.practicum.playlistmaker.medialibrary.ui.fragment.FavoriteTrackFragment">
 
     <LinearLayout
         android:id="@+id/placeholderNothingWasFound"
