--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:id="@+id/fragmentPlaylist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_gray"
     android:theme="@style/Theme.PlaylistMaker"
-    tools:context="com.practicum.playlistmaker.new_playlist.ui.fragment.NewPlaylistFragment">
+    tools:context="com.practicum.playlistmaker.newplaylist.ui.fragment.NewPlaylistFragment">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/gg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/left_guideline"
@@ -24,44 +29,66 @@
             android:orientation="vertical"
             app:layout_constraintGuide_end="@dimen/constraintGuide_16" />
 
-        <FrameLayout
-            android:id="@+id/cover_and_toolbar"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/cover_bottom_guideline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.48" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/top_info_bottom_guideline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/bottom_info_guideline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.65" />
+
+        <ImageView
+            android:id="@+id/cover_playlist"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/name_playlist">
+            android:scaleType="centerCrop"
+            android:src="@drawable/placeholder_playlist"
+            app:layout_constrainedHeight="true"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toTopOf="@id/name_playlist" />
 
-            <ImageView
-                android:id="@+id/cover_playlist"
-                android:layout_width="match_parent"
-                android:layout_height="360dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintDimensionRatio="1:1"
-                android:background="@drawable/placeholder_playlist_view"/>
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbarPlaylist"
-                style="@style/panelHeaderToolbar"
-                android:background="@null"
-                app:navigationIcon="@drawable/ic_arrow_back"/>
-        </FrameLayout>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarPlaylist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_arrow_back_playlist" />
 
         <TextView
             android:id="@+id/name_playlist"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_16"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintEnd_toEndOf="@id/right_guideline"
-            app:layout_constraintTop_toBottomOf="@id/cover_and_toolbar"
-            android:layout_marginTop="@dimen/margin_bottom_24"
+            app:layout_constraintBottom_toTopOf="@id/description_playlist"
+            app:layout_constraintHorizontal_bias="0"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_24"
             android:fontFamily="@font/ys_display_medium"
             android:maxLines="1"
             android:ellipsize="end"
-            tools:text="Название плейлиста"/>
+            app:layout_constraintTop_toBottomOf="@id/cover_playlist"
+            tools:text="Название плейлиста" />
 
         <TextView
             android:id="@+id/description_playlist"
@@ -70,13 +97,14 @@
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintEnd_toEndOf="@id/right_guideline"
             app:layout_constraintTop_toBottomOf="@id/name_playlist"
-            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@id/total_time_and_quantity"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_18"
             android:fontFamily="@font/ys_text_regular"
             android:maxLines="1"
             android:ellipsize="end"
-            tools:text="Описание плейлиста"/>
+            app:layout_constraintHorizontal_bias="0"
+            tools:text="Описание плейлиста" />
 
         <LinearLayout
             android:id="@+id/total_time_and_quantity"
@@ -86,7 +114,8 @@
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintEnd_toEndOf="@id/right_guideline"
             app:layout_constraintTop_toBottomOf="@id/description_playlist"
-            android:layout_marginTop="8dp">
+            app:layout_constraintBottom_toTopOf="@id/share_and_more"
+            app:layout_constraintHorizontal_bias="0">
 
             <TextView
                 android:id="@+id/total_time"
@@ -126,10 +155,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="@dimen/margin_16"
             app:layout_constraintStart_toStartOf="@id/left_guideline"
             app:layout_constraintEnd_toEndOf="@id/right_guideline"
             app:layout_constraintTop_toBottomOf="@id/total_time_and_quantity"
-            android:layout_marginTop="16dp">
+            app:layout_constraintBottom_toTopOf="@id/bottom_info_guideline"
+            app:layout_constraintHorizontal_bias="0">
 
             <ImageView
                 android:id="@+id/share"
@@ -138,124 +169,111 @@
                 android:layout_marginEnd="16dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_share"
-                app:tint="@color/black"/>
+                app:tint="@color/black" />
 
             <ImageView
                 android:id="@+id/more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_more"/>
+                android:src="@drawable/ic_more" />
         </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/tracks_in_playlist"
+    <LinearLayout
+        android:id="@+id/bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/corner_rectangle_bottomsheet"
+        android:orientation="vertical"
+        android:paddingHorizontal="@dimen/padding_text"
+        android:paddingStart="@dimen/margin_16"
+        android:paddingEnd="@dimen/margin_16"
+        app:behavior_hideable="false"
+        app:behavior_peekHeight="240dp"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+        <View
+            android:layout_width="50dp"
+            android:layout_height="4dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounder" />
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
-                android:id="@+id/bottom_sheet"
+            <TextView
+                android:id="@+id/playlist_empty"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/corner_rectangle_bottomsheet"
-                android:orientation="vertical"
-                android:paddingHorizontal="@dimen/padding_text"
-                app:behavior_hideable="false"
-                app:behavior_peekHeight="236dp"
-                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_bottom_54"
+                android:fontFamily="@font/ys_text_regular"
+                android:gravity="center_horizontal"
+                android:text="@string/empty_playlist"
+                android:textColor="?attr/snackbar_text"
+                android:textSize="@dimen/text_size_18"
+                android:visibility="visible" />
 
-                <View
-                    android:layout_width="50dp"
-                    android:layout_height="4dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/rounder" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerTracks"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="5"
+                tools:listitem="@layout/track_view" />
+        </FrameLayout>
+    </LinearLayout>
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/playlist_empty"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/text_size_18"
-                        android:fontFamily="@font/ys_text_regular"
-                        android:text="@string/empty_playlist"
-                        android:gravity="center_horizontal"
-                        android:layout_marginTop="@dimen/margin_bottom_54"
-                        android:visibility="visible"/>
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerTracks"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-                </FrameLayout>
-            </LinearLayout>
-
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-        <View
-               android:id="@+id/overlay"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:background="#99000000"
-               android:visibility="gone"/>
-
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/more_playlist"
+    <View
+        android:id="@+id/overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="@id/left_guideline"
-        app:layout_constraintEnd_toEndOf="@id/right_guideline"
-        app:layout_constraintTop_toBottomOf="@id/name_playlist"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:background="#99000000"
+        android:visibility="gone" />
 
-        <LinearLayout
-            android:id="@+id/bottom_sheet_more"
+    <LinearLayout
+        android:id="@+id/bottom_sheet_more"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/corner_rectangle_bottomsheet"
+        android:orientation="vertical"
+        app:behavior_hideable="true"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+        <View
+            android:layout_width="50dp"
+            android:layout_height="4dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounder" />
+
+        <include
+            android:id="@+id/info_playlist_more"
+            layout="@layout/playlist_view_on_player"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/corner_rectangle_bottomsheet"
-            android:orientation="vertical"
-            app:behavior_hideable="true"
-            app:behavior_peekHeight="336dp"
-            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+            android:layout_height="wrap_content" />
 
-            <View
-                android:layout_width="50dp"
-                android:layout_height="4dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/rounder"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_share_playlist"
+            style="@style/button_info_playlist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/share_playlist" />
 
-            <include
-                android:id="@+id/info_playlist_more"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                layout="@layout/playlist_view_on_player"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_edit_playlist"
+            style="@style/button_info_playlist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/edit_playlist" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_share_playlist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/share_playlist"
-                style="@style/button_info_playlist"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_edit_playlist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/edit_playlist"
-                style="@style/button_info_playlist"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_delete_playlist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/delete_playlist"
-                style="@style/button_info_playlist"/>
-        </LinearLayout>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_delete_playlist"
+            style="@style/button_info_playlist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/delete_playlist" />
+    </LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
